# mini

./: .gitignore  README.md  mini.py
native/: CMakeLists.txt  allocate.c  errors.c  errors.h  mini.c  source.c  source.h  string.c  string.h  tokenizer.c  tokenizer.h  types.h
native/ast/: Symbol.h  ast_types.c  ast_types.h  expression.c  expression.h  read_ast.c  read_ast.h  statement.c  statement.h  symbol.c  symbol.h  symbol_for_name.c  symbol_for_name.h
native/collections/: hashmap.c  hashmap.h  hashset.c  hashset.h  map_result.h  pointer_set.c  pointer_set.h  struct.c  struct.h
native/core/: allocate.c  allocate.h  complex.c  complex.h  errors.c  errors.h  files.c  files.h  numbers.c  numbers.h  string.c  string.h  stringbuilder.c  stringbuilder.h  typedefs.h
native/micro/: complex_types.h  debug.h  expressions.c  fs.c  fs.h  function.c  function.h  micro.c  print.c  print.h  split_elements.c  split_elements.h  variables.c  variables.h
native/micro/methods/: string_methods.c  string_methods.h  string_split.c  string_split.h
native/mini/: mini.c
native/minic/: any.c  any.h  list.c  list.h  mini.c  source.c  source.h  tokenizer.c  tokenizer.h  types.c  types.h
native/minic/elements/: element.c  element.h  element_queue.c  element_queue.h
native/minic/expressions/: expressions.c  expressions.h
native/minic/micro/: micro.c  micro.h
native/minic/module/: module.c  module.h
native/minic/token_reader/: bracket_token_reader.h  number_token_reader.c  number_token_reader.h  string_token_reader.c  symbol_token_reader.c  symbol_token_reader.h  token_reader.c  token_reader.h  token_reader_struct.h
native/minic/tokens/: token.c  token.h  token_queue.c  token_queue.h  tokenizer.c  tokenizer.h
native/minic/tokens/token_reader/: bracket_token_reader.c  bracket_token_reader.h  number_token_reader.c  (+10 more)
native/test/: tests.c
(+47 files in other folders)
