cmake_minimum_required(VERSION 3.0)
project (mini)
file(GLOB_RECURSE core "core/*.c")
file(GLOB_RECURSE generated "generated/*.c")
file(GLOB_RECURSE minic "minic/*.c")
file(GLOB_RECURSE test "test/*.c")
include_directories(.)
add_executable(minic ${core} ${generated} ${minic})
add_executable(test ${test})
set(CMAKE_C_FLAGS "-std=c11 -O3")
