cmake_minimum_required(VERSION 3.0)
project (mini)
file(GLOB_RECURSE core "core/*.c")
file(GLOB_RECURSE collections "collections/*.c")
file(GLOB_RECURSE generated "generated/*.c")
file(GLOB_RECURSE minic "minic/*.c")
file(GLOB_RECURSE micro "micro/*.c")
file(GLOB_RECURSE test "test/*.c")
include_directories(.)
add_executable(minic ${core} ${collections} ${generated} ${minic} ${micro})
add_executable(test ${test} ${core} ${collections} ${minic} ${generated})
set(CMAKE_C_FLAGS "-std=c11 -O0 -g3 -Wall")
#set(CMAKE_C_FLAGS "-std=c11 -O3")
